--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -19,4 +19,5 @@ asd_news_settings_global = Allgemeine Einstellungen
 asd_news_settings_max_per_page = Maximale Anzahl der News pro Seite
 asd_news_settings_published_by = Veröffentlichen der News für
 asd_news_current_lang = ausgewählte Sprache
-asd_news_all_lang = aller Sprachen
+asd_news_all_lang = alle Sprachen
+asd_news_include_css = ASD News .CSS Datei einbinden
