--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -21,3 +21,4 @@ asd_news_settings_published_by = Veröffentlichen der News für
 asd_news_current_lang = ausgewählte Sprache
 asd_news_all_lang = alle Sprachen
 asd_news_include_css = ASD News .CSS Datei einbinden
+asd_news_install_modul = ASD News Modul installieren
