--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -21,3 +21,4 @@ asd_news_settings_published_by = publishing news for
 asd_news_current_lang = selected language
 asd_news_all_lang = all languages
 asd_news_include_css = include ASD News .CSS file
+asd_news_install_modul = install modul ASD News
