--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -5,6 +5,7 @@ asd_news_deleted = news successfully deleted
 asd_news_title = title
 asd_news_publishedAt = published on
 asd_news_publish = publish
+asd_news_really_unpublish = really unpublish the news?
 asd_news_really_delete = really delete the news?
 asd_news_picture = thumbnail
 asd_news_text = content
@@ -22,3 +23,8 @@ asd_news_current_lang = selected language
 asd_news_all_lang = all languages
 asd_news_include_css = include ASD News .CSS file
 asd_news_install_modul = install modul ASD News
+asd_news_no_access = You do not have the required rights for this area
+asd_news_modul_added = ASD News modul was added
+asd_news_faq = F.A.Q
+asd_news_faq_question_1 = Works the addon with the <code>url_control</code> plugin?
+asd_news_faq_answer_1 = Yes it does, it must be made only following settings:<br /><img src="../{0}/asd_news/help_url_control_settings.png" style="max-width: 100%;">
