Where Condition erneuert, Einstellungen Speichern Meldung

--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -19,6 +19,8 @@ asd_news_settings = settings
 asd_news_settings_global = general settings
 asd_news_settings_max_per_page = maximum numbers of news per page
 asd_news_settings_published_by = publishing news for
+asd_news_settings_saved = The settings have been successfully saved
+asd_news_settings_not_saved = An error as occurred: settings could not be saved
 asd_news_current_lang = selected language
 asd_news_all_lang = all languages
 asd_news_include_css = include ASD News .CSS file
