--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -11,22 +11,27 @@ asd_news_picture = Vorschaubild
 asd_news_text = Inhalt
 asd_news_unpublished_s = News wurde erfolgreich unveröffentlicht
 asd_news_unpublished_m = News wurden erfolgreich unveröffentlicht
+
 asd_news_rubric = Rubriken
 asd_news_rubric_saved = Datensatz erfolgreich gelöscht
 asd_news_rubric_add = Rubrik hinzufügen
 asd_news_rubric_really_delete = Rubrik wirklich löschen?
+
 asd_news_settings = Einstellungen
 asd_news_settings_global = Allgemeine Einstellungen
 asd_news_settings_max_per_page = Maximale Anzahl der News pro Seite
+asd_news_settings_min_archive = Ab der <b id="asd_news_min_archive_text">{0}</b> News in Archiv
 asd_news_settings_published_by = Veröffentlichen der News für
 asd_news_settings_saved = Die Einstellungen wurden erfolgreich gespeichert
 asd_news_settings_not_saved = Ein Fehler ist aufgetreten: Einstellungen konnten nicht gespeichert werden
+
 asd_news_current_lang = ausgewählte Sprache
 asd_news_all_lang = alle Sprachen
 asd_news_include_css = ASD News .CSS Datei einbinden
-asd_news_install_modul = ASD News Modul installieren
+asd_news_install_modul = "{0}" Modul installieren
 asd_news_no_access = Sie haben nicht die erforderlichen Rechte für diesen Bereich
 asd_news_modul_added = ASD News Modul wurde hinzugefügt
+
 asd_news_faq = F.A.Q
 asd_news_faq_question_1 = Funktioniert das Addon mit dem <code>url_control</code> Plugin?
 asd_news_faq_answer_1 = Ja es funktioniert, es müssen nur folgende Einstellungen gemacht werden:<br /><img src="../{0}/asd_news/help_url_control_settings.png" style="max-width: 100%;">
