--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -7,7 +7,7 @@ asd_news_publishedAt = Veröffentlicht am
 asd_news_publish = Veröffentlichen
 asd_news_really_unpublish = News wirklich unveröffentlichen?
 asd_news_really_delete = News wirklich löschen?
-asd_news_picture = Vorschaubild
+asd_news_picture = Bild
 asd_news_text = Inhalt
 asd_news_unpublished_s = News wurde erfolgreich unveröffentlicht
 asd_news_unpublished_m = News wurden erfolgreich unveröffentlicht
