--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -5,6 +5,7 @@ asd_news_deleted = News erfolgreich gelöscht
 asd_news_title = Titel
 asd_news_publishedAt = Veröffentlicht am
 asd_news_publish = Veröffentlichen
+asd_news_unpublish = Unveröffentlichen
 asd_news_really_unpublish = News wirklich unveröffentlichen?
 asd_news_really_delete = News wirklich löschen?
 asd_news_picture = Bild
