--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -28,15 +28,18 @@ asd_news_settings_not_saved = An error as occurred: settings could not be saved
 
 asd_news_current_lang = selected language
 asd_news_all_lang = all languages
-asd_news_include_css = include ASD News .CSS file
 asd_news_install_modul = install modul "{0}"
 asd_news_no_access = You do not have the required rights for this area
 asd_news_modul_added = ASD News modul was added
 asd_news_site_numbers = page numbers
 asd_news_prev_next_buttons = prev/next Buttons
+asd_news_admin_perm_need = You do not have any rights for the addon to make full use of it.
 
 asd_news_faq = F.A.Q
 asd_news_faq_question_1 = Works the addon with the <code>url_control</code> plugin?
 asd_news_faq_answer_1 = Yes it does, it must be made only following settings:<br /><img src="../{0}/asd_news/help_url_control_settings.png" style="max-width: 100%;">
+
+asd_news_faq_question_2 = Why do not I see more settings?
+asd_news_faq_answer_2 = All you need is the appropriate user rights.
 
 submit = submit
