--- a/lang/de_de.lang
+++ b/lang/de_de.lang
@@ -27,6 +27,7 @@ asd_news_settings_published_by = Veröffentlichen der News für
 asd_news_settings_saved = Die Einstellungen wurden erfolgreich gespeichert
 asd_news_settings_not_saved = Ein Fehler ist aufgetreten: Einstellungen konnten nicht gespeichert werden
 
+asd_news_no_article_selected = Sie haben keinen Artikel ausgewählt, der für die News zuständig ist.
 asd_news_current_lang = ausgewählte Sprache
 asd_news_all_lang = alle Sprachen
 asd_news_install_modul = "{0}" Modul installieren
@@ -49,6 +50,6 @@ asd_news_faq_question_2 = Warum sehe ich keine Einstellungen mehr?
 asd_news_faq_answer_2 = Sie brauchen dafür die entsprechenden Benutzerrechte.
 
 asd_news_faq_question_3 = Kann ich weitere Felder, wie z.B. Vorschautext oder eine Galerie, einfügen?
-asd_news_faq_answer_3 = Ja! Dazu gehen Sie einfach auf <a href=index.php?page=asd_news&amp;subpage=metainfo">SQL Felder</a> und fügen wie beim Metainfo-AddOn die entsprechenden Felder ein. Man brauchst dafür die ensprechende Rechte.
+asd_news_faq_answer_3 = Ja! Dazu gehen Sie einfach auf <a href="index.php?page=asd_news&amp;subpage=metainfo">SQL Felder</a> und fügen wie beim Metainfo-AddOn die entsprechenden Felder ein. Man brauchst dafür die ensprechende Rechte.
 
 submit = abschicken
