--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -11,6 +11,8 @@ asd_news_really_unpublish = really unpublish the news?
 asd_news_really_delete = really delete the news?
 asd_news_picture = thumbnail
 asd_news_text = content
+asd_news_pager = Pager
+asd_news_pagination = Pagination
 asd_news_unpublished_s = News was successfully unpublished
 asd_news_unpublished_m = News was successfully unpublished
 
