--- a/lang/en_gb.lang
+++ b/lang/en_gb.lang
@@ -5,8 +5,8 @@ asd_news_status_saved = status successfully changed
 asd_news_deleted = news successfully deleted
 asd_news_title = title
 asd_news_publishedAt = published on
-asd_news_publish = publish
-asd_news_unpublish = unpublished
+asd_news_published = published
+asd_news_unpublished = unpublished
 asd_news_really_unpublish = really unpublish the news?
 asd_news_really_delete = really delete the news?
 asd_news_picture = thumbnail
